--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+== 0.1.1
+
+* fix model seed file bug
+
+* drop 'database_cleaner' dependence
+
+* add generator seed_upgrade:revise_model
+
+
 == 0.1.0
 
 * First release
